feat : 업무 부여 프로세스 관련 pub/sub 추가 (현재 UI subscription 등 안되는 이슈 있음)

--- a/nursing_home/src/interfaces_pkg/CMakeLists.txt
+++ b/nursing_home/src/interfaces_pkg/CMakeLists.txt
@@ -17,6 +17,9 @@ find_package(rosidl_default_generators REQUIRED)
 rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/Task.msg"
   "msg/AstarMsg.msg"
+  "msg/RobotStatus.msg"
+  "msg/RobotStatusList.msg"
+  "msg/TaskRequest.msg"
   DEPENDENCIES builtin_interfaces std_msgs geometry_msgs
 )
 
