test : 모든 로봇 태스크 할당 시 1번으로 topic 발행

--- a/bridge_config.yaml
+++ b/bridge_config.yaml
@@ -25,3 +25,8 @@ topics:
     from_domain: 91
     to_domain: 99
     remap: task
+  astar_paths_1:
+    type: interfaces_pkg/msg/AstarMsg
+    from_domain: 91
+    to_domain: 99
+    remap: astar_paths
